--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <h2 class="post_meta">Post Meta</h2>
                     <div class="b">
                         <h2 class="main_content">Main Content</h2>
-                        <img src="" alt="Main Content images">
+                        <h1 class="main_content_image">Main Content Image</h1>
                     </div>
                 </div>
             </div>
