--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
                 </div>
             </div>
 
-             <div class="c">
-                <h2>Side Bar</h2>
-                <h2>Ads</h2>
-                <h2>Other stuffs</h2>
+             <div>
+                <h2 class="side_bar">Side Bar</h2>
+                <h2 class="ads">Ads</h2>
+                <h2 class="other_stuff">Other stuffs</h2>
              </div>
     </main>
     <footer>
